# rv1106_drm_lvgl

./: .gitignore  .vscode-ctags  CMakeLists.txt  Makefile  README.md
lv_drm/: lv_conf.h  lv_drv_conf.h
output/: CMakeCache.txt  Makefile  cmake_install.cmake  my_lvglApp
output/lv_drm/lv_drivers/: Makefile  cmake_install.cmake
output/lv_drm/lvgl/: Makefile  cmake_install.cmake
src/: main.c
